BE - Activities - get
