# backend/src/config/apiDoc.yaml
@@ -27,7 +27,20 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
         '500':
           $ref: '#/components/responses/UnexpectedError'
-
+    get:
+      summary: Get all activities
+      security: []
+      responses:
+        '200':
+          description: All activities fetched
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Activity'
+        '500':
+          $ref: '#/components/responses/UnexpectedError'
 
   /users/:
     get:
