# backend/src/controllers/activities.js
@@ -1,9 +1,14 @@
 const Activity = require('../models/Activity');
 
 module.exports = {
-    createActivity
+    createActivity,
+    getAll
 };
 
 function createActivity(name, description, photoUrl) {
     return Activity.create({ name, description, photoUrl });
+}
+
+function getAll() {
+    return Activity.findAll();
 }
